<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EF7F7F"
    android:orientation="vertical"
    android:gravity="center">
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp">
        <!-- In order to Stabilize Layout -->
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_centerInParent="true">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <ImageView
                android:layout_width="128dp"
                android:layout_height="128dp"
                android:layout_weight="12"
                android:contentDescription="OneDayRecord"
                android:src="@drawable/logo512" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layout_weight="3"
                android:letterSpacing="-0.02"
                android:lineSpacingExtra="16sp"
                android:textColor="#ffffff"
                android:textSize="20sp"
                tools:text="ONEDAY RECORD" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="61dp"
                android:ems="13"
                android:background="@drawable/border_for_login"
                android:padding="10dp"
                android:hint="@string/id" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="61dp"
                android:ems="9"
                android:background="@drawable/border_for_login"
                android:padding="10dp"
                android:hint="@string/password" />
            <Button
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/border_for_login"
                android:text="@string/login"/>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/forgot_your_password"/>
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:layout_alignParentBottom="true"
        android:layout_margin="0dp"
        android:background="@drawable/background_for_signup"
        android:id="@+id/signup"
        android:text="@string/don_t_have_an_account_sign_up"/>
</RelativeLayout>